compiler-skeleton/tests/parse-error/parse_decl.ln
int:int;

bool:bool;

int:bool;

bool:int;

a:integer;

b:boolean;

c:int

d=int;